--- a/src/Game/MainPage.xaml
+++ b/src/Game/MainPage.xaml
@@ -49,15 +49,29 @@
             </Grid.ColumnDefinitions>
 
             <StackPanel Grid.Column="1">
-                <Button Height="110"   Name="UpButton" Content="Up" />
-                <Button Height="110"   Name="DownButton" Content="Down" />
+                <Button 
+                    Foreground="DarkGray"
+                    Height="110"   Name="UpButton" >
+                    <Image Source="/Assets/arrow-up-01.png"/>
+                </Button>
+                <Button 
+                    Foreground="DarkGray"
+                    Height="110"   Name="DownButton">
+                    <Image Source="/Assets/arrow-down-01.png"/>
+                </Button>
             </StackPanel>
 
-            <Button  Grid.Column="0"  Name="LeftButton" Content="Left" />
-            <Button  Grid.Column="2"  Name="RightButton" Content="Right" />
+            <Button  Grid.Column="0"  Name="LeftButton" >
+                <Image Source="/Assets/arrow-left-01.png"/>
+            </Button>
+            <Button  Grid.Column="2"  Name="RightButton" >
+                <Image Source="/Assets/arrow-right-01.png"/>
+            </Button>
         </Grid>
 
-        <Button Grid.Row="0" Grid.Column="2" Name="ResetButton" Content="Reset" />
+        <Button Grid.Row="0" Grid.Column="2" Height="87" Width="87" Name="ResetButton"> 
+            <Image Source="/Assets/refresh.png"/>
+        </Button>
         <Grid Grid.Row="0" Grid.RowSpan="3" 
               Grid.Column="0"
               Grid.ColumnSpan="3"
