--- a/src/Game/MainPage.xaml
+++ b/src/Game/MainPage.xaml
@@ -83,6 +83,7 @@
 
         <Button Grid.Row="0"
                 BorderBrush="White"
+                Margin="0,0,24,0"
                 Grid.Column="2" Height="87" Width="87" Name="ResetButton">
             <Image Source="/Assets/refresh.png" />
         </Button>
