--- a/src/Game/MainPage.xaml
+++ b/src/Game/MainPage.xaml
@@ -12,11 +12,49 @@
     Foreground="{StaticResource PhoneForegroundBrush}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     shell:SystemTray.IsVisible="False">
-
+    <phone:PhoneApplicationPage.Resources>
+        <Storyboard x:Name="fadeIn">
+                <ColorAnimationUsingKeyFrames Duration="0:0:0.3" 
+                                              FillBehavior="Stop" 
+                                              Storyboard.TargetName="Score" 
+                                              Storyboard.TargetProperty="(Foreground).(SolidColorBrush.Color)">
+                    <LinearColorKeyFrame KeyTime="0:0:0" Value="White" />
+                    <LinearColorKeyFrame KeyTime="0:0:0.1" Value="Yellow" />
+                    <LinearColorKeyFrame KeyTime="0:0:0.2" Value="White" />
+            </ColorAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Duration="0:0:0.3" 
+                                           Storyboard.TargetProperty="FontSize"
+                                              Storyboard.TargetName="Score" >
+                <LinearDoubleKeyFrame KeyTime="0:0:0" Value="32.0" />
+                <LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="38.0" />
+                <LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="32.0" />
+            </DoubleAnimationUsingKeyFrames>
+            <ObjectAnimationUsingKeyFrames 
+                Duration="0:0:0.3" 
+                Storyboard.TargetProperty="Margin"
+                Storyboard.TargetName="Score">
+                <DiscreteObjectKeyFrame KeyTime="0:0:0">
+                    <DiscreteObjectKeyFrame.Value>
+                        <Thickness>12,0,12,12</Thickness>
+                    </DiscreteObjectKeyFrame.Value>
+                </DiscreteObjectKeyFrame>
+                <DiscreteObjectKeyFrame KeyTime="0:0:0.1">
+                    <DiscreteObjectKeyFrame.Value>
+                        <Thickness>12,0,12,12</Thickness>
+                    </DiscreteObjectKeyFrame.Value>
+                </DiscreteObjectKeyFrame>
+                <DiscreteObjectKeyFrame KeyTime="0:0:0.2">
+                    <DiscreteObjectKeyFrame.Value>
+                        <Thickness>12,0,12,12</Thickness>
+                    </DiscreteObjectKeyFrame.Value>
+                </DiscreteObjectKeyFrame>
+            </ObjectAnimationUsingKeyFrames>
+        </Storyboard>
+    </phone:PhoneApplicationPage.Resources>
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto" />
+            <RowDefinition Height="114" />
             <RowDefinition Height="*" />
             <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
