--- a/src/Game/MainPage.xaml
+++ b/src/Game/MainPage.xaml
@@ -29,26 +29,22 @@
                 <LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="38.0" />
                 <LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="32.0" />
             </DoubleAnimationUsingKeyFrames>
-            <ObjectAnimationUsingKeyFrames 
-                Duration="0:0:0.3" 
-                Storyboard.TargetProperty="Margin"
-                Storyboard.TargetName="Score">
-                <DiscreteObjectKeyFrame KeyTime="0:0:0">
-                    <DiscreteObjectKeyFrame.Value>
-                        <Thickness>12,0,12,12</Thickness>
-                    </DiscreteObjectKeyFrame.Value>
-                </DiscreteObjectKeyFrame>
-                <DiscreteObjectKeyFrame KeyTime="0:0:0.1">
-                    <DiscreteObjectKeyFrame.Value>
-                        <Thickness>12,0,12,12</Thickness>
-                    </DiscreteObjectKeyFrame.Value>
-                </DiscreteObjectKeyFrame>
-                <DiscreteObjectKeyFrame KeyTime="0:0:0.2">
-                    <DiscreteObjectKeyFrame.Value>
-                        <Thickness>12,0,12,12</Thickness>
-                    </DiscreteObjectKeyFrame.Value>
-                </DiscreteObjectKeyFrame>
-            </ObjectAnimationUsingKeyFrames>
+
+            <DoubleAnimationUsingKeyFrames Duration="0:0:0.3" 
+                                           Storyboard.TargetProperty="(Canvas.Left)"
+                                              Storyboard.TargetName="Score" >
+                <LinearDoubleKeyFrame KeyTime="0:0:0" Value="12.0" />
+                <LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="6.0" />
+                <LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="12.0" />
+            </DoubleAnimationUsingKeyFrames>
+            <DoubleAnimationUsingKeyFrames Duration="0:0:0.3" 
+                                           Storyboard.TargetProperty="(Canvas.Top)"
+                                              Storyboard.TargetName="Score" >
+                <LinearDoubleKeyFrame KeyTime="0:0:0" Value="0.0" />
+                <LinearDoubleKeyFrame KeyTime="0:0:0.1" Value="-3.0" />
+                <LinearDoubleKeyFrame KeyTime="0:0:0.2" Value="0.0" />
+            </DoubleAnimationUsingKeyFrames>
+
         </Storyboard>
     </phone:PhoneApplicationPage.Resources>
     <!--LayoutRoot is the root grid where all page content is placed-->
@@ -70,10 +66,14 @@
             <StackPanel Orientation="Horizontal">
                 <TextBlock
                     Foreground="White"
+                    Margin="12,0,0,12"
                     Style="{StaticResource PhoneTextLargeStyle}" Text="score:" />
-                <TextBlock
+                <Canvas Margin="-12,0" Width="200">
+                    <TextBlock Canvas.Left="0" Canvas.Top="0"
                     Foreground="White"
                     Style="{StaticResource PhoneTextLargeStyle}" Name="Score" Text=" " />
+                </Canvas>
+
             </StackPanel>
 
         </StackPanel>
