--- a/src/Game/App.xaml
+++ b/src/Game/App.xaml
@@ -7,7 +7,7 @@
 
     <!--Application Resources-->
     <Application.Resources>
-        <local:LocalizedStrings xmlns:local="clr-namespace:Game" x:Key="LocalizedStrings"/>
+        <local:LocalizedStrings xmlns:local="clr-namespace:Game" x:Key="Strings"/>
     </Application.Resources>
 
     <Application.ApplicationLifetimeObjects>
