--- a/src/Game/MainPage.xaml
+++ b/src/Game/MainPage.xaml
@@ -68,7 +68,7 @@
                 <TextBlock
                     Foreground="White"
                     Margin="12,0,0,12"
-                    Style="{StaticResource PhoneTextLargeStyle}" Text="score:" />
+                    Style="{StaticResource PhoneTextLargeStyle}" Text="{Binding S.Score, Source={StaticResource Strings}}" />
                 <Canvas Margin="-12,0" Width="200">
                     <TextBlock Canvas.Left="0" Canvas.Top="0"
                     Foreground="White"
@@ -123,8 +123,10 @@
               Visibility="Collapsed"
               Grid.Column="0" Margin="24,0,12,100" Grid.ColumnSpan="3" VerticalAlignment="Top"
               Grid.Row="2">
-            <TextBlock VerticalAlignment="Center" TextWrapping="Wrap" Style="{StaticResource PhoneTextLargeStyle}">
-                use swipe gestures to move tiles
+            <TextBlock Margin="24"
+                       TextWrapping="Wrap" 
+                       Text="{Binding S.ControlUseSwipe, Source={StaticResource Strings}}"
+                       Style="{StaticResource PhoneTextLargeStyle}">
             </TextBlock>
         </Grid>
         <Grid
@@ -176,7 +178,7 @@
                 <StackPanel Orientation="Horizontal">
                     <TextBlock
                         Foreground="White"
-                        Style="{StaticResource PhoneTextLargeStyle}" Text="score:" />
+                        Style="{StaticResource PhoneTextLargeStyle}" Text="{Binding S.Score, Source={StaticResource Strings}}" />
                     <TextBlock
                         Foreground="White"
                         Name="OverScore" Style="{StaticResource PhoneTextLargeStyle}" Text="" />
@@ -184,11 +186,11 @@
                 <Button
                     BorderBrush="White"
                     Foreground="White"
-                    Name="OverReset" Content="reset" />
+                    Name="OverReset" Content="{Binding S.OverReset, Source={StaticResource Strings}}" />
                 <Button
                     BorderBrush="White"
                     Foreground="White"
-                    Name="OverShare" Content="share result" />
+                    Name="OverShare" Content="{Binding S.OverShareResult, Source={StaticResource Strings}}" />
             </StackPanel>
         </Grid>
     </Grid>
