--- a/src/Game/View/About.xaml
+++ b/src/Game/View/About.xaml
@@ -16,35 +16,37 @@
     <!--LayoutRoot is the root grid where all page content is placed-->
     <Grid x:Name="LayoutRoot" Background="Transparent">
         <phone:Pivot>
-            <phone:PivotItem Header="about">
+            <phone:PivotItem Header="{Binding S.About, Source={StaticResource Strings}}">
                 <StackPanel>
                     <StackPanel Orientation="Horizontal">
-                        <TextBlock Style="{StaticResource PhoneTextLargeStyle}" Text="version:"/>
-                        <TextBlock Style="{StaticResource PhoneTextLargeStyle}" Name="Version" Text=""/>
+                        <TextBlock Style="{StaticResource PhoneTextLargeStyle}"
+                                   Text="{Binding S.Version, Source={StaticResource Strings}}" />
+                        <TextBlock Style="{StaticResource PhoneTextLargeStyle}" Name="Version" Text="" />
                     </StackPanel>
-                    <TextBlock Style="{StaticResource PhoneTextLargeStyle}" TextWrapping="Wrap">
-                        Based on Gabriele Cirulli's 2048 game.
-                    </TextBlock>
+                    <TextBlock
+                        Text="{Binding S.AboutBasedOn, Source={StaticResource Strings}}"
+                        Style="{StaticResource PhoneTextLargeStyle}" TextWrapping="Wrap" />
                     <HyperlinkButton
                         Margin="0,12"
                         HorizontalAlignment="Left"
-                                     Name="OriginalGameButton">
+                        Name="OriginalGameButton">
                         http://gabrielecirulli.github.io/2048/
                     </HyperlinkButton>
-                    <Button Name="ReviewButton" Margin="0,24" Content="Give us a review"/>
+                    <Button Name="ReviewButton" Margin="0,24"
+                            Content="{Binding S.AboutGiveUsAReview, Source={StaticResource Strings}}" />
                 </StackPanel>
             </phone:PivotItem>
-            <phone:PivotItem Header="help">
+            <phone:PivotItem Header="{Binding S.Help , Source={StaticResource Strings}}">
                 <StackPanel>
-                    <TextBlock Style="{StaticResource PhoneTextLargeStyle}" TextWrapping="Wrap">
-                    Join numbers and get the 2048 tile!
-                    </TextBlock>
-                    <TextBlock Style="{StaticResource PhoneTextLargeStyle}" TextWrapping="Wrap">
-                    Use arrow keys to move the tiles.
-                    </TextBlock>
-                    <TextBlock Style="{StaticResource PhoneTextLargeStyle}" TextWrapping="Wrap">
-                    When two tiles with the same number touch, they merge into one.
-                    </TextBlock>
+                    <TextBlock Style="{StaticResource PhoneTextLargeStyle}"
+                               Text="{Binding S.AboutJoinNumbers, Source={StaticResource Strings}}"
+                               TextWrapping="Wrap" />
+                    <TextBlock
+                        Text="{Binding S.AboutUseArrowKeys, Source={StaticResource Strings}}"
+                        Style="{StaticResource PhoneTextLargeStyle}" TextWrapping="Wrap" />
+                    <TextBlock
+                        Text="{Binding S.AboutWhenTwoNumberTouch, Source={StaticResource Strings}}"
+                        Style="{StaticResource PhoneTextLargeStyle}" TextWrapping="Wrap" />
                 </StackPanel>
 
             </phone:PivotItem>
